--- a/estilo.css
+++ b/estilo.css
@@ -1,26 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap');
 
-body{
-    
+body {
     font-family: "Gabarito", sans-serif;
-    
-    color: white;
+    color: #ffffff;
 
-    height: 100vh;
-    width: 100vw;
-
+    min-height: 100vh;
     margin: 0;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 1rem;
 
-    
-    
-    background: #134E5E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #71B280, #134E5E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #71B280, #134E5E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: linear-gradient(135deg, #71B280, #134E5E);
 }
 
 #conteudo{
@@ -59,6 +51,7 @@ body{
     font-size: 0.5rem;
     flex: 1;
 }
+
 
 
 
